# proof-of-intent-protocol

./: .env.example  .env.sdk.example  .gitignore  DEVELOPER_GUIDE.md  FEEDBACK.md  README.md  deploy.sh  requirements.txt
agents/: axl_test.py  compiler.py  demo.py  execution_agent.py  orchestrator.py  research_agent.py
agents/axl_configs/: execution.json  orchestrator.json  research.json  user.json
agents/demo_app/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
config/: config.py  deployed.json
contracts/: .gitignore  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AgentRegistry.sol  DelegationRegistry.sol  ExecutionGate.sol  IntentRegistry.sol
contracts/test/: AgentRegistry.t.sol  (+3 more)
examples/: quickstart.py
intent-custody-ts/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
landing/: index.html  package-lock.json  package.json  vite.config.js
poip-py/: .env.example  .gitignore
poip-ts/: .env.example  package-lock.json
poip_py/: .env.example  README.md  pyproject.toml
poip_py/examples/: quickstart.py
poip_py/proof_of_intent/: __init__.py  _client.py  _compiler.py  _sign.py  errors.py
poip_py/proof_of_intent/_abis/: DelegationRegistry.json  ExecutionGate.json
poip_py/tests/: test_client.py
poip_ts/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
scripts/: register_ens.py  verify.py  zg_upload.py
tests/: test_sdk_minimal_env.py
utils/: __init__.py  axl_client.py  contract_client.py  helpers.py  integration_test.py  protocol_ids.py  sign_intent.py
(+42 files in other folders)
